--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div class="container">
-  <div class="nav-container">
-    <app-navbar></app-navbar>
-  </div>
-  <div class="router-container">
-    <router-outlet></router-outlet>
+<div class="outer-container">
+  <div class="container">
+    <div class="nav-container">
+      <app-navbar></app-navbar>
+    </div>
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
