--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="container">
+    <div class="header-container">
+        <h1>/home </h1>
+        <hr>
+    </div>
+    <div class="info-container">
+        <p>just some kid that likes computers, trying to navigate through the struggles of the tech world.</p>
+        <p>i'm probably watching netflix, gaming with some friends, or maybe writing a bit of code.</p>
+        <p>i am basically always listening to music, heres what i'm listening to lately...</p>
+    </div>
+    <div class="spotify-container">
+        <h2>SPOTIFY STUFF HERE</h2>
+    </div>
+</div>
