added info to about and education pages

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,22 @@
-<p>about works!</p>
+<div class="container">
+  <div class="header-container">
+    <h1>/about</h1>
+    <hr />
+  </div>
+  <div class="info-container">
+    <p>
+      I recently graduated with my
+      <span id="highlight-blue">Bachelors in Computer Science</span> from the
+      <span id="highlight-red">University of North Carolina at Wilmington</span>
+      and will be continuing for my
+      <span id="highlight-blue">Masters in Computer Science</span> at
+      <span id="highlight-red">Georgia Institute of Technology</span> this
+      upcoming Spring!
+    </p>
+    <p>
+      I am mostly focused on Software Development, but I am interested in
+      learning more about the various fields in Computer Science such as Machine
+      Learning and Artificial Intelligence. 
+    </p>
+  </div>
+</div>
