--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,34 @@
-<p>education works!</p>
+<div class="container">
+  <div class="header-container">
+    <h1>/education</h1>
+    <hr />
+  </div>
+  <div class="education-container">
+    <div class="education-info">
+      <div class="school-container">
+        <h2>Associate in Science</h2>
+        <p>Aug. 2019 - May 2022</p>
+      </div>
+      <h3>Cape Fear Community College</h3>
+      <p>Wilmington, North Carolina</p>
+    </div>
+    <hr>
+    <div class="education-info">
+        <div class="school-container">
+          <h2>Bachelor of Science in Computer Science</h2>
+          <p>Aug. 2022 - July 2024</p>
+        </div>
+        <h3>University of North Carolina at Wilmington</h3>
+        <p>Wilmington, North Carolina</p>
+      </div>
+      <hr>
+      <div class="education-info">
+        <div class="school-container">
+          <h2>Master of Science in Computer Science</h2>
+          <p>Beginning Aug. 2024</p>
+        </div>
+        <h3>Georgia Institute of Technology</h3>
+        <p>Atlanta, Georgia</p>
+      </div>
+  </div>
+</div>
