--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,6 @@
         [typeSpeed]="100"
         [loop]="true"
         [backSpeed]="50"
-        
       >
         <p class="typing"></p>
       </ngx-typed-js>
@@ -20,5 +19,8 @@
       <li><a routerLink="about">/about</a></li>
       <li><a routerLink="education">/education</a></li>
     </nav>
+  </div>
+  <div class="contact-container">
+    <app-contact></app-contact>
   </div>
 </div>
