--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,19 +4,26 @@
     <hr />
   </div>
   <div class="info-container">
-    <p>
-      I recently graduated with my
-      <span id="highlight-blue">Bachelors in Computer Science</span> from the
-      <span id="highlight-red">University of North Carolina at Wilmington</span>
-      and will be continuing for my
-      <span id="highlight-blue">Masters in Computer Science</span> at
-      <span id="highlight-red">Georgia Institute of Technology</span> this
-      upcoming Spring!
-    </p>
-    <p>
-      I am mostly focused on Software Development, but I am interested in
-      learning more about the various fields in Computer Science such as Machine
-      Learning and Artificial Intelligence. 
-    </p>
+    <div class="text-container">
+      <p>
+        I recently graduated with my
+        <span id="highlight-blue">Bachelors in Computer Science</span> from the
+        <span id="highlight-red"
+          >University of North Carolina at Wilmington</span
+        >
+        and will be continuing for my
+        <span id="highlight-blue">Masters in Computer Science</span> at
+        <span id="highlight-red">Georgia Institute of Technology</span> this
+        upcoming Spring!
+      </p>
+      <p>
+        My main focus is on Software Development, but I am very interested in
+        learning more about the various fields in Computer Science such as
+        Machine Learning and Artificial Intelligence.
+      </p>
+    </div>
+    <div class="img-container">
+      <img src="assets/images/prof_pic.jpg" alt="Picture of me" />
+    </div>
   </div>
 </div>
